--- a/src/app/pages/guide/guide.component.html
+++ b/src/app/pages/guide/guide.component.html
@@ -26,15 +26,15 @@
       </div>
       <div class="col-5">
         <div>
-          <img src="./assets/img/guide/2.png"/>
+          <img src="./assets/img/guide/2.webp"/>
         </div>
       </div>
       <div class="col-5 content">
         <div class="content-inner">
           <p class="mdt my-3">How Lab-Grown Jewellery Are Formed</p>
-          <p class="mb-2 smt">Lab-grown jewelery are real diamonds grown in man-made environments. Current technology can recreate conditions
+          <p class="mb-2">Lab-grown jewelery are real diamonds grown in man-made environments. Current technology can recreate conditions
             necessary for a diamond crystal to form, replicating the earth's natural process of diamond formation.</p>
-          <p class="smt">There are two common methods for growing diamonds in a lab: High Pressure High Temperature (HPHT) and
+          <p class="">There are two common methods for growing diamonds in a lab: High Pressure High Temperature (HPHT) and
             Chemical Vapor Deposition (CVD).An HPHT diamond starts as a small diamond seed that is placed into carbon.
             Exposed to about 1500 degrees Celsius and pressurized to approximately 1.5 million pounds per square inch,
             the pure carbon melts and begins to form around the starter seed. It is then carefully cooled to form a pure
@@ -48,20 +48,19 @@
       <div class="col-7 ps-0 natural-j-img">
         <img src="./assets/img/guide/3.png"/>
       </div>
-      <div class="col-7 pe-0 natural-j-content">
+      <div class="col-5 pe-0 natural-j-content">
         <div class="natural-d natural-inner">
-          <h4>About Natural Jewellery</h4>
+          <h4 class="mb-4">About Natural Jewellery</h4>
           <p class="mdt my-3">How Earth-Created Jewelry Are Formed</p>
-          <p class="mb-2 smt">Diamonds are crystalline carbon atoms that formed under the earth’s surface over 3 billion years ago. To be
+          <p class="mb-2">Diamonds are crystalline carbon atoms that formed under the earth’s surface over 3 billion years ago. To be
             more exact, they formed in the earth’s mantle about 90 miles below the surface under temperatures as high as
             2000° F and a pressure of 45-60 kilobars.</p>
-          <p class="smt">After their formations, diamonds reach the earth’s surface during extremely rare and not yet observed
+          <p class="">After their formations, diamonds reach the earth’s surface during extremely rare and not yet observed
             deep-source volcanic eruptions. Diamond is the only gemstone composed of a single element, as they are
             typically about 99.95% carbon. The other 0.05% can include one or more trace elements, which are atoms that
             aren’t part of a diamond’s essential chemistry. Some of them influence color.</p>
         </div>
       </div>
-      <div class="col"></div>
     </div>
   </div>
   <!--diamond-and-4cs-->
@@ -70,7 +69,7 @@
       <div class="col"></div>
       <div class="col-10 text-center">
         <h4 class="mb-3">Diamond Characteristics and the 4 Cs</h4>
-        <p class="smt">Once the lab-grown or earth-created diamond is selected, the next step is to choose the quality of the diamond
+        <p class="">Once the lab-grown or earth-created diamond is selected, the next step is to choose the quality of the diamond
           and the shape of its cut. Both types of diamonds are graded by gemological institutes following exactly the same
           process and are cut using exactly the same standards. To help guide your process, you can learn about diamond
           grading and certification, the 4 C’s, diamond shapes, and more, below.</p>
@@ -81,7 +80,7 @@
       <div class="line my-3"></div>
       <!--Jewellery Carat-->
       <div class="carat-collapse">
-        <a data-bs-toggle="collapse" href="#caratcollapse2" role="button" aria-expanded="false" aria-controls="caratcollapse2">
+        <a class="title-4cs" data-bs-toggle="collapse" href="#caratcollapse2" role="button" aria-expanded="false" aria-controls="caratcollapse2">
           <h5 class="text-center">Jewellery Carat</h5>
         </a>
         <div class="collapse multi-collapse" id="caratcollapse2">
@@ -89,10 +88,10 @@
             <div class="row">
               <div class="col-6 diamond-granding">
                 <h6 class="text-center mb-4">DIAMOND CARAT GRADING</h6>
-                <p class="mb-3">Diamond carat (ct) refers to a diamond’s weight. The most common and popular diamonds in the jewelry
+                <p class="mb-3 text-center">Diamond carat (ct) refers to a diamond’s weight. The most common and popular diamonds in the jewelry
                   industry range up to 1 carat. Prices increase exponentially as the diamond's weight increases, as larger
                   diamond crystals over 1 carat are more difficult to find.</p>
-                <p>Diamond cutters today use advanced technology to achieve the best proportions, ensuring that each diamond
+                <p class="text-center">Diamond cutters today use advanced technology to achieve the best proportions, ensuring that each diamond
                   is cut following similar ratios. This allows them to estimate the diamond's diameter based on its carat weight.
                   Though this is still an approximation, it can help you identify the best carat weight for your desired size.</p>
               </div>
@@ -142,7 +141,7 @@
       <div class="line my-3"></div>
       <!--Jewellery Color-->
       <div class="color-collapse">
-        <a data-bs-toggle="collapse" href="#caratcollapse3" role="button" aria-expanded="false" aria-controls="caratcollapse3">
+        <a class="title-4cs" data-bs-toggle="collapse" href="#caratcollapse3" role="button" aria-expanded="false" aria-controls="caratcollapse3">
           <h5 class="text-center">Jewellery Color</h5>
         </a>
         <div class="collapse multi-collapse" id="caratcollapse3">
@@ -150,16 +149,16 @@
             <div class="row">
               <div class="col-6 color-left">
                 <h6 class="text-center mb-4">DIAMOND COLOR GRADING</h6>
-                <p class="mb-3">Gemological institutes grade white diamonds based on the absence of color. Though diamonds are primarily
+                <p class="mb-3 text-center">Gemological institutes grade white diamonds based on the absence of color. Though diamonds are primarily
                   carbon, they often include trace elements that can affect their color. The most common trace element is
                   nitrogen, which gives off a subtle shade of yellow. The richer the yellow hue, the more common the diamond crystal, which decreases their value.</p>
-                <p>To grade white diamond color, gemological institutes use letters of the alphabet, starting from D
+                <p class="text-center">To grade white diamond color, gemological institutes use letters of the alphabet, starting from D
                   (colorless) all the way to Z (light yellow). Truly colorless diamonds are quite rare, therefore are
                   the most expensive. However, you should note that subtle hints of color are difficult to spot outside
                   of a laboratory environment. The most common color ranges are D through F and G through J.</p>
               </div>
               <div class="col-6">
-                <img src="./assets/img/guide/color.png"/>
+                <img src="./assets/img/guide/color.webp"/>
               </div>
             </div>
           </div>
@@ -168,7 +167,7 @@
       <div class="line my-3"></div>
       <!--Jewellery Clarity-->
       <div class="clarity-collapse">
-        <a data-bs-toggle="collapse" href="#caratcollapse4" role="button" aria-expanded="false" aria-controls="caratcollapse4">
+        <a class="title-4cs" data-bs-toggle="collapse" href="#caratcollapse4" role="button" aria-expanded="false" aria-controls="caratcollapse4">
           <h5 class="text-center">Jewellery Clarity</h5>
         </a>
         <div class="collapse multi-collapse" id="caratcollapse4">
@@ -176,15 +175,15 @@
             <div class="row">
               <div class="col-6 color-left">
                 <h6 class="text-center mb-4">DIAMOND COLOR GRADING</h6>
-                <p class="mb-3">From formation of the crystal to cutting and polishing, diamonds undergo a long journey, leaving an
+                <p class="mb-3 text-center">From formation of the crystal to cutting and polishing, diamonds undergo a long journey, leaving an
                   individual mark on each stone. The diamond’s internal markings are called inclusions, while surface
                   irregularities are called blemishes. Together, they’re called clarity characteristics. Gemologists grade diamond clarity based on the absence of inclusions and blemishes. After thorough examination, they prescribe a rating from flawless (no inclusions or blemishes) to included (some clarity characteristics will be visible even with the naked eye).  </p>
-                <p>The fewer inclusions and blemishes the diamond has, the more valuable it is considered to be. Nonetheless,
+                <p class="text-center">The fewer inclusions and blemishes the diamond has, the more valuable it is considered to be. Nonetheless,
                   clarity characteristics are like a natural diamond's 'birth marks' and are extraordinary gemological
                   manifestations of its formation.</p>
               </div>
               <div class="col-6">
-                <img src="./assets/img/guide/clarity.png"/>
+                <img src="./assets/img/guide/clarity.webp"/>
               </div>
             </div>
           </div>
@@ -193,7 +192,7 @@
       <div class="line my-3"></div>
       <!--Jewellery Shape-->
       <div class="clarity-collapse">
-        <a data-bs-toggle="collapse" href="#caratcollapse5" role="button" aria-expanded="false" aria-controls="caratcollapse5">
+        <a class="title-4cs" data-bs-toggle="collapse" href="#caratcollapse5" role="button" aria-expanded="false" aria-controls="caratcollapse5">
           <h5 class="text-center">Jewellery Shape</h5>
         </a>
         <div class="collapse multi-collapse" id="caratcollapse5">
@@ -201,66 +200,51 @@
             <div class="row">
               <div class="col-6 color-left">
                 <h6 class="text-center mb-4">DIAMOND COLOR GRADING</h6>
-                <p class="mb-3">Gemological laboratories study a modern diamond’s cut based on how its facets interact with light,
+                <p class="mb-3 text-center">Gemological laboratories study a modern diamond’s cut based on how its facets interact with light,
                   prescribing an excellent, very good, good, fair, or poor grade. Excellent and very good sparkle the most.
                   Since this C determines the overall appearance of the modern day brilliant cut diamond, we consider it
                   to be one of the most important. We recommend only selecting diamonds with an 'excellent' grading.</p>
-                <p>The modern round brilliant cut diamond has 57 facets, or sometimes 58 if the cutter included a culet,
+                <p class="text-center">The modern round brilliant cut diamond has 57 facets, or sometimes 58 if the cutter included a culet,
                   which is an additional facet at the bottom of the pavilion. Today, diamonds are cut with a precision up
                   to 1/100th of a millimeter allowing the perfect balance of proportions to reveal a diamond's beauty.</p>
               </div>
               <div class="col-6">
-                <img src="./assets/img/guide/shape.png"/>
+                <img src="./assets/img/guide/shape.webp"/>
               </div>
+            </div>
           </div>
         </div>
+        <div class="line mt-3"></div>
       </div>
-      <div class="line mt-3"></div>
     </div>
-  </div>
-
-</div>
-  <!--jewellery-insurance-->
-  <div class="insurance row mbt-120">
-    <div class="col"></div>
-    <div class="col-10 text-center">
-      <h4 class="mb-3">Jewellery Insurance</h4>
-      <p class="smt mt-40 mb-3">Though our AGURI jewelry designs are made to be enjoyed forever, sometimes unpleasant surprises happen.
-        With this in mind, it’s best to be prepared and insured. We recommend Jeweler’s Mutual for jewelry insurance,
-        as many of our past customers have had great experiences working with them.</p>
-      <p class="smt">AGURI is a fine jewelry destination for memorable pieces designed and crafted in NYC. Our carefully considered selection of rings, necklaces, earrings and bracelets honors mindful
-        production and genuine materials.</p>
-    </div>
-    <div class="col"></div>
-  </div>
-</div>
-
-<!--jewellery-care-->
-<div class="container jewel-care mbt-120">
-  <div class="row pbt-100">
-    <div class="col-5">
-      <div class="mb-4">
-        <h4 class="mb-2">Jewellery Care</h4>
-        <p class="smt">Even though all plated jewellery tends to loose a little bit of the plating and colour over time,
-          there are a few things you can do to make it last longer and keep its shine.</p>
+    <!--jewellery-Care-->
+    <div class="care mbt-120">
+      <div class="text-right care-content">
+        <h5 class="mb-4">Jewellery Care</h5>
+        <p class="mtp type-j">Jewellery: Gold plated over sterling silver or brass</p>
+        <ul>
+          <li class="mb-1">Keep your jewellery dry. Don't do laundry or wash dishes with it on.</li>
+          <li class="mb-1">Don't wear it in pool, at the spa or in a seawater.</li>
+          <li class="mb-1">Take it off before working out.</li>
+          <li class="mb-1">Keep it away from body chemistry: your perfume, lotion, hand cream etc...</li>
+          <li class="mb-1">Don't use jewellery cleaner to clean it. it is too harsh, regular wipe with a soft cloth its all you need.</li>
+          <li class="">Keep it in our AGURI pouch and a box in a dry and clean environment when you don't wear it.</li>
+        </ul>
+        <p class="mt-3 type-j">Jewelry: Gold plated over stainless steel</p>
+        <ul>
+          <li class="">Jewellery is waterproof but please keep it away from harsh or sharp objects to avoid scratching.</li>
+        </ul>
       </div>
-      <img src="./assets/img/guide/4.png" />
     </div>
-
-    <div class="col-7 jewellery-care">
-      <img src="./assets/img/guide/5.png"/>
-      <p class="mdt mb-3 mt-5">Make it last longer and keep its shine</p>
-        <p class="mb-1">* Keep your jewellery dry. Don't do laundry or wash dishes with it on.</p>
-        <p class="mb-1">* Don't wear it in pool, at the spa or in a seawater.</p>
-        <p class="mb-1">* Take it off before working out.</p>
-        <p class="mb-1">* Keep it away from body chemistry: your perfume, lotion, hand cream etc...</p>
-        <p class="mb-1">* Don't use jewellery cleaner to clean it. it is too harsh, regular wipe with a soft cloth.</p>
-        <p class="mb-1">* Keep it in our pouch in a dry and clean environment when you don't wear it.</p>
+    <!--bottom-text-->
+    <div class="we">
+      <div class="line2"></div>
+      <h5 class="text-center we-content">AGURI is a fine jewelry destination for memorable pieces designed and crafted in
+        New York City. Our carefully considered selection of rings, necklaces, earrings and bracelets honors mindful
+        production and genuine materials.</h5>
     </div>
   </div>
-</div>
-
-
-
-
-
+  <!--Back to top-->
+  <div class="to-top" (click)="scrollToTop()" [ngClass]="{ 'show-scrollTop': windowScrolled }">
+    <i class="fa-solid fa-circle-arrow-up fa-2xl"></i>
+  </div>
