--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -77,60 +77,61 @@
   </div>
 </div>
 
-<!--New Arrivals-->
-<div class="simi-prod new-arrivals mbt-120">
-  <div class="container">
-    <div class="row">
-      <div class="col-3">
-        <h5 class="mt-5">New Arrivals</h5>
-        <p class="smt mt-2">AGURI designs reinvent our iconic AGURI collection with bold profiles and powerful details.</p>
-      </div>
-      <div class="col-9 pe-0">
-        <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
-          <div class="carousel-inner">
-            <div class="carousel-item active" data-bs-interval="3000">
-              <div class="row">
-                <div class="col-4" *ngFor="let item of newArrival | slice: 0:3">
-                  <div class="card-prd">
-                    <div class="img">
-                      <a routerLink="/product-detail/{{item.pid}}">
-                        <img src="{{item.thumb}}">
-                      </a>
-                    </div>
-                    <div (click)="quickview(item)" class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
-                      Quick view
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="carousel-item" data-bs-interval="3000">
-              <div class="row">
-                <div class="col-4" *ngFor="let item of newArrival | slice: 3:6">
-                  <div class="card-prd">
-                    <div class="img">
-                      <a routerLink="/product-detail/{{item.pid}}">
-                        <img src="{{item.thumb}}">
-                      </a>
-                    </div>
-                    <div (click)="quickview(item)" class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
-                      Quick view
+<div class="container-fluid">
+  <!--New Arrivals-->
+  <div class="simi-prod new-arrivals mbt-120">
+      <div class="row">
+        <div class="col-3">
+          <h5 class="mt-5">New Arrivals</h5>
+          <p class="smt mt-2">AGURI designs reinvent our iconic AGURI collection with bold profiles and powerful details.</p>
+        </div>
+        <div class="col-9 pe-0">
+          <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active" data-bs-interval="3000">
+                <div class="row">
+                  <div class="col-4" *ngFor="let item of newArrival | slice: 0:3">
+                    <div class="card-prd">
+                      <div class="img">
+                        <a routerLink="/product-detail/{{item.pid}}">
+                          <img src="{{item.thumb}}">
+                        </a>
+                      </div>
+                      <div (click)="quickview(item)" class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+                        Quick view
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
-            </div>
-            <div class="carousel-item" data-bs-interval="3000">
-              <div class="row">
-                <div class="col-4" *ngFor="let item of newArrival | slice: 6:9">
-                  <div class="card-prd">
-                    <div class="img">
-                      <a routerLink="/product-detail/{{item.pid}}">
-                        <img src="{{item.thumb}}">
-                      </a>
+              <div class="carousel-item" data-bs-interval="3000">
+                <div class="row">
+                  <div class="col-4" *ngFor="let item of newArrival | slice: 3:6">
+                    <div class="card-prd">
+                      <div class="img">
+                        <a routerLink="/product-detail/{{item.pid}}">
+                          <img src="{{item.thumb}}">
+                        </a>
+                      </div>
+                      <div (click)="quickview(item)" class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+                        Quick view
+                      </div>
                     </div>
-                    <div (click)="quickview(item)" class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
-                      Quick view
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item" data-bs-interval="3000">
+                <div class="row">
+                  <div class="col-4" *ngFor="let item of newArrival | slice: 6:9">
+                    <div class="card-prd">
+                      <div class="img">
+                        <a routerLink="/product-detail/{{item.pid}}">
+                          <img src="{{item.thumb}}">
+                        </a>
+                      </div>
+                      <div (click)="quickview(item)" class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+                        Quick view
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -139,90 +140,86 @@
           </div>
         </div>
       </div>
-    </div>
   </div>
-</div>
-
-<!--All-jewellery-->
-<div class="container">
+  <!--All-jewellery-->
   <div class="all-jewelery mbt-120">
-    <div class="row mbt">
-      <div class="col-4 all-top">
-        <div class="top-content">
-          <h4 class="mb-1">Aguri's Jewellery</h4>
-          <p class="smt mb-3">Shop our carefully considered selection of rings, necklaces, earrings and bracelets</p>
-        </div>
-        <div class="item-box-all">
-          <div class="item-box-img">
-            <a routerLink="/category/4">
-              <img src="./assets/img/home/all-j1.webp"/>
-            </a>
+      <div class="row mbt">
+        <div class="col-4 all-top">
+          <div class="top-content">
+            <h4 class="mb-1">Aguri's Jewellery</h4>
+            <p class="smt mb-3">Shop our carefully considered selection of rings, necklaces, earrings and bracelets</p>
           </div>
-          <div class="item-box-content text-center">
-            <a routerLink="/category/4">
-              <h5>Necklaces</h5>
-            </a>
+          <div class="item-box-all">
+            <div class="item-box-img">
+              <a routerLink="/category/4">
+                <img src="./assets/img/home/all-j1.webp"/>
+              </a>
+            </div>
+            <div class="item-box-content text-center">
+              <a routerLink="/category/4">
+                <h5>Necklaces</h5>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="col-8">
+          <div class="item-box-all">
+            <div class="item-box-img">
+              <a routerLink="/category/3">
+                <img src="./assets/img/home/all-j2.webp"/>
+              </a>
+            </div>
+            <div class="item-box-content text-center">
+              <a routerLink="/category/3">
+                <h5>Bracelets</h5>
+              </a>
+            </div>
           </div>
         </div>
       </div>
-      <div class="col-8">
-        <div class="item-box-all">
-          <div class="item-box-img">
-            <a routerLink="/category/3">
-              <img src="./assets/img/home/all-j2.webp"/>
-            </a>
+      <div class="row all-bottom">
+        <div class="col-4 bottom-content">
+          <div class="bottom-content-inner">
+            <p class="text-right decor-text mb-0">Forward-thinking fine jewelry essentials for individuals of all genders that breathe new life into classic silhouettes. For individuals of all genders that.</p>
           </div>
-          <div class="item-box-content text-center">
-            <a routerLink="/category/3">
-              <h5>Bracelets</h5>
-            </a>
+        </div>
+        <div class="col-4">
+          <div class="item-box-all">
+            <div class="item-box-img">
+              <a routerLink="/category/1">
+                <img src="./assets/img/home/all-j3.webp"/>
+              </a>
+            </div>
+            <div class="item-box-content text-center">
+              <a routerLink="/category/1">
+                <h5>Rings</h5>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="col-4">
+          <div class="item-box-all">
+            <div class="item-box-img">
+              <a routerLink="/category/2">
+                <img src="./assets/img/home/all-j4.webp"/>
+              </a>
+            </div>
+            <div class="item-box-content text-center">
+              <a routerLink="/category/2">
+                <h5>Earrings</h5>
+              </a>
+            </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="row all-bottom">
-      <div class="col-4 bottom-content">
-        <div class="bottom-content-inner">
-          <p class="text-right decor-text mb-0">Forward-thinking fine jewelry essentials for individuals of all genders that breathe new life into classic silhouettes. For individuals of all genders that.</p>
-        </div>
-      </div>
-      <div class="col-4">
-        <div class="item-box-all">
-          <div class="item-box-img">
-            <a routerLink="/category/1">
-              <img src="./assets/img/home/all-j3.webp"/>
-            </a>
-          </div>
-          <div class="item-box-content text-center">
-            <a routerLink="/category/1">
-              <h5>Rings</h5>
-            </a>
-          </div>
-        </div>
-      </div>
-      <div class="col-4">
-        <div class="item-box-all">
-          <div class="item-box-img">
-            <a routerLink="/category/2">
-              <img src="./assets/img/home/all-j4.webp"/>
-            </a>
-          </div>
-          <div class="item-box-content text-center">
-            <a routerLink="/category/2">
-              <h5>Earrings</h5>
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
 </div>
 
 <!--Our Best Seller-->
 <div class="also-like best-seller">
-  <h5 class="text-center mb-4">Our Best Sellers</h5>
+  <h5 class="text-center mb-4">Best Sellers</h5>
   <div id="bestseller" class="carousel slide carousel-dark" data-bs-ride="carousel">
-    <div class="carousel-inner container">
+    <div class="carousel-inner container-fluid">
       <div class="carousel-item active" data-bs-interval="3000">
         <div class="row">
           <div class="col-3" *ngFor="let item of bestSeller | slice: 0: 4">
@@ -317,7 +314,7 @@
 
 <!--New collection-->
 <div class="aguri-collection">
-  <div class=" new-collection mbt-120 container">
+  <div class=" new-collection mbt-120 container-fluid">
     <div class="row">
       <div class="col-5 new-collection-left ps-0">
         <a routerlink="#">
@@ -357,8 +354,8 @@
 </div>
 <!--Users Experiences-->
 <div class="experiences mbt-120">
-  <div class="container">
-    <h4 class="text-center mb-5">The Aguri Experience</h4>
+  <div class="container-fluid">
+    <h5 class="text-center mb-5">The Aguri Experience</h5>
     <div class="row">
       <div class="col-4 text-center ps-0 experience-user">
         <div class="px-4 experience-inner">
@@ -388,20 +385,20 @@
   </div>
 </div>
 <!--Showroom-->
-<div class="container showroom mbt-120">
+<div class="container-fluid showroom mbt-120">
   <div class="row">
-    <div class="col-4 ps-0">
-        <h4 class="mb-3">Our Showrooms</h4>
-        <p class="smt mb-1"><i class="fas fa-map-marker-alt"></i> 6901 Hollywood Blvd, LA, CA 90028, US</p>
-<!--        <p class="smt"><i class="fas fa-map-marker-alt"></i> 10 NorthumbeCartrland St, London WC2N5DB, UK</p>-->
-        <p class="smt mt-3">Email info@AGURI&PIJ2022.com for appointment</p>
-      </div>
+    <div class="col-3 ps-0">
+      <h5 class="mb-3">Our Showrooms</h5>
+      <p class="smt mb-1"><i class="fas fa-map-marker-alt"></i> 6901 Hollywood Blvd, LA, CA 90028, US</p>
+      <p class="smt"><i class="fas fa-map-marker-alt"></i> 10 NorthumbeCartrland St, LD WC2N5DB, UK</p>
+      <p class="smt mt-3">Email info@AGURI&PIJ2022.com for appointment</p>
+    </div>
     <div class="col-2 showroom bottom-content">
       <div class="bottom-content-inner">
         <p class="text-right decor-text mb-0">We’re happy to help with in-store or virtual appointments</p>
       </div>
     </div>
-    <div class="col-6 pe-0">
+    <div class="col-7 pe-0">
         <!--carousel showroom-->
         <div id="carouselshowroom" class="carousel slide carousel-fade" data-bs-ride="carousel">
           <div class="carousel-indicators">
@@ -410,13 +407,13 @@
             <button type="button" data-bs-target="#carouselshowroom" data-bs-slide-to="2" aria-label="Slide 3"></button>
           </div>
           <div class="carousel-inner">
-            <div class="carousel-item active" data-bs-interval="2000">
+            <div class="carousel-item active" data-bs-interval="1000">
               <img src="./assets/img/home/showroom1.png"/>
             </div>
-            <div class="carousel-item" data-bs-interval="2000">
+            <div class="carousel-item" data-bs-interval="1000">
               <img src="./assets/img/home/showroom2.png"/>
             </div>
-            <div class="carousel-item" data-bs-interval="2000">
+            <div class="carousel-item" data-bs-interval="1000">
               <img src="./assets/img/home/showroom3.png"/>
             </div>
           </div>
@@ -426,10 +423,10 @@
 </div>
 <!--GET INSPIRATION-->
 <div class="inspiration mbt-120">
-  <h4 class="mb-2 text-center">Get Inspiration</h4>
+  <h5 class="mb-2 text-center">Get Inspiration</h5>
   <p class="smt mb-5 text-center">Tag us on your insta to get a chance for a feature</p>
   <div id="inspiration-carousel" class="carousel slide carousel-fade carousel-dark" data-bs-ride="carousel">
-    <div class="carousel-inner container">
+    <div class="carousel-inner container-fluid">
       <div class="carousel-item active" data-bs-interval="2000">
         <div class="row">
           <div class="col-3 px-0">
@@ -508,5 +505,5 @@
 
 <!--Back to top-->
 <div class="to-top" (click)="scrollToTop()" [ngClass]="{ 'show-scrollTop': windowScrolled }">
-  Back to top<i class="fa fa-arrow-circle-up fa-3x"></i>
+  <i class="fa fa-arrow-circle-up fa-2xl"></i>
 </div>
