--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -132,10 +132,10 @@
 }
 /*about*/
 .about{
-  background-image: url("/assets/img/home/about.png");
+  background-image: url("https://i.imgur.com/knqjiqp.png");
   background-size: cover;
-  padding-top:100px;
-  padding-bottom:100px;
+  padding-top:130px;
+  padding-bottom:130px;
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
